# 05_fractal_mpi

./: CMakeLists.txt  arial_ttf.h  arial_ttf2.h  fractal_mpi.cpp  fractal_mpi.h  main.cpp  main_fractal.cpp  main_fractal_colectiva.cpp  palette.cpp
